# dropmcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  review.json
.claude/skills/api-response-for-browser/: SKILL.md
.claude/skills/no-browser-datetime/: SKILL.md
.claude/skills/no-test-code-in-production/: SKILL.md
.claude/skills/preserve-existing-tests/: SKILL.md
.claude/skills/react-component-layout/: SKILL.md
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
client/src/: App.tsx
client/src/api/: catalog.ts  feedback.ts  subscriptions.ts
client/src/components/: CatalogCard.module.css  CatalogCard.tsx  CatalogGrid.module.css  CatalogGrid.tsx  FeedbackCard.module.css  FeedbackCard.tsx  FeedbackDetailsPanel.module.css  FeedbackDetailsPanel.tsx  FeedbackHeader.module.css  FeedbackHeader.tsx  FeedbackList.module.css  FeedbackList.tsx  FeedbackToolbar.module.css  Footer.tsx  (+25 more)
client/tests/: catalog.spec.ts  feedback.spec.ts  fixtures.ts  skill-content.spec.ts  telemetry.spec.ts
examples/: server.py
src/dropmcp/: INSTRUCTIONS.default.md  __init__.py  __main__.py  catalog.py  cli.py  config.py  eval_results.py  eval_results_starrocks.py  feedback.py  feedback_instructions.md  identity.py  instructions.py  middleware.py  prompts.py  server.py  skills.py  subscriptions.py  telemetry.py  validate.py
template/: .gitignore.jinja  Dockerfile.jinja  README.md.jinja  copier.yml  requirements.txt.jinja  server.py.jinja
template/{% if include_promptfoo_evals %}tests{% endif %}/: promptfooconfig.yaml.jinja  transform.cjs
tests/: conftest.py  otel_test_support.py  test_catalog.py  test_eval_results.py  test_feedback.py  test_instructions.py  test_prompts.py  test_skills.py  test_subscriptions.py  test_telemetry.py  test_validate.py
(+18 files in other folders)
