[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dropmcp"
version = "0.1.0"
description = "Drop a skills/ and prompts/ folder, get a FastMCP server with a browseable catalog UI."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Agoda" }]
keywords = ["mcp", "fastmcp", "skills", "prompts", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.2.4,<4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/agoda-com/dropmcp"
Repository = "https://github.com/agoda-com/dropmcp"
Issues = "https://github.com/agoda-com/dropmcp/issues"

[project.scripts]
dropmcp = "dropmcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dropmcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/dropmcp/static/dist" = "dropmcp/static/dist"

[tool.hatch.build.targets.sdist.force-include]
"src/dropmcp/static/dist" = "src/dropmcp/static/dist"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
